# nu_plugin_plot

./: Cargo.toml
src/: lib.rs
