[package]
authors = ["Max Brown"]
description = "Plot graphs in nushell using numerical lists."
repository = "https://github.com/euphrasiologist/nu_plugin_plot"
edition = "2021"
license = "MIT"
name = "nu_plugin_plot"
version = "0.98.0"

[dependencies]
nu-plugin = "0.98.0"
nu-protocol = { version = "0.98.0", features = ["plugin"] }
owo-colors = "4.1.0"
fnv = "1.0.7"
terminal_size = "0.3.0"
